Updated readme with arrow extension